--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="Stylesheet.css">
+<link rel="Stylesheet" href="Stylesheet.css">
  <title>Our Menu</title>
 </head>
 <body>
