Coursera Test Modifications.

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -7,21 +7,28 @@
  <title>Our Menu</title>
 </head>
 <body>
-<div>
-	<section>
-		<p id="p1">Chicken</p>
-		<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
-	</section>
+<h1>Our Menu</h1>
 
-	<section>
-		<p id="p2">Beef</p>
-		<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
-	</section>
+<div class="row">
+<section class="col-lg-1 col-md-1 col-sm-1">
+   <p id="p1">Chicken</p>
+	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+    </p>
+</section>	
 
-	<section>
-		<p id="p3">Sushi</p>
-		<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
-	</section>
+
+<section class="col-lg-2 col-md-2 col-sm-2">
+	<p id="p2">Beef</p>
+	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+	</p>	
+</section>
+
+<section class="col-lg-3 col-md-3 col-sm-3">
+	<p id="p3">Sushi</p>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+		</p>
+</section>
+
 </div>
 </body>
 </html>
