--- a/site/index.html
+++ b/site/index.html
@@ -5,19 +5,111 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Keshi's Content Services</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="site-styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Keshi's Content Service</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/site-styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100&display=swap" rel="stylesheet">
   </head>
 <body>
+  <header>
+  <nav id="header-nav" class="navbar navbar-expand-lg navbar-default">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="img/black.png" alt=""class="d-inline-block float-start align-text-top">
+      <div class="navbar-brand d-inline-block">
+        <h1>Keshi's Content Services</h1>
+          <p>
+            <img src="img/high.gif" alt="mini logo">
+            <span>5G Certfied</span>
+          </p>
+       </div>
+    </a>
+    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsable-nav" aria-controls="collapsable-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsable-nav">
+      <ul id="nav-list" class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </div>
+</nav>
+</header>
+<!--<header>
+  <nav id="header-nav" class="navbar navbar-light" bg-light> 
+    <div class="container">
+      <div class="navbar-header" role="navigation">
+       <a href="index.html" class="float-start d-none d-md-block">
+          <div id="logo-img" alt="logo image"></div>
+        </a>
 
-<p>Hello Guys!</p>
+    <div class="navbar-brand" role="navigation">
+          <a href="index.html"><h1>Keshi's Content Services</h1></a>
+          <p>
+            <img src="img/high.gif" alt="mini logo">
+            <span>5G Certfied</span>
+          </p>
+       </div>
+
+      <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#collapsable-nav" aria-expanded="false" aria-label="Toggle Navigation">
+        <span class="navbar-toggler-icon"></span>
+        <span class="sr-only"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+
+         <div id="collapsable-nav" role="navigation" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="menu-categories.html">
+                <span class="glyphicon glyphicon-home"></span><br class=".d-none .d-sm-block"> Home</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-briefcase"></span><br class=".d-none .d-sm-block"> Portfolio</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-tasks"></span><br class=".d-none .d-sm-block"> Services</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-user"></span><br class=".d-none .d-sm-block"> About</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-earphone"></span><br class=".d-none .d-sm-block"> Contact</a>
+            </li>
+            <li id="phone" class=".d-none .d-sm-block">
+              <a href="tel:(808) 401-2538">
+                <span>(808) 401-2538</span></a>
+            </li> 
+          </ul> 
+        </div>
+    </div>    
+  </nav> 
+</header> -->
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
